# ParallelProgramming

lw1/: CMakeLists.txt
lw1/task1_1/: Archiver.h  CMakeLists.txt  helpers.h  main.cpp
lw1/task1_2/: CMakeLists.txt  Extractor.h  main.cpp
lw2/: CMakeLists.txt
lw2/task2_1/: CMakeLists.txt  LifeGame.h  LifeGameController.h  LifeGameVisualizer.h  _helpers.h  main.cpp
lw2/task2_2/: CMakeLists.txt  GUI.h  GaussBlur.h  ImageProcessor.h  main.cpp
lw3/: CMakeLists.txt
lw3/task3_1/: Actor.h  Bank.h  CMakeLists.txt  Simulation.h  SimulationController.h  SimulationExecutor.h  main.cpp
lw3/task3_1/_libs/: _logger.h  _timer.h
lw3/task3_1/actor/: Actor.h  Apu.h  Bart.h  Berns.h  Homer.h  Liza.h  Marge.h
lw4/: CMakeLists.txt
lw4/task4_1/: CMakeLists.txt  MusicPlayer.h  main.cpp
lw5/: CMakeLists.txt
lw5/task5_1/: CMakeLists.txt  Server.h  TV.h  TV_.h  Television.cpp  Television.h  main.cpp
lw6/: CMakeLists.txt
lw6/task6_1/: CMakeLists.txt  TicketOffice.h  main.cpp
lw6/task6_2/: AtomicMax.h  CMakeLists.txt
lw6/task6_5/: CMakeLists.txt  main.cpp  shema.txt
lw6/tests/: CMakeLists.txt  tests6_1.cpp  tests6_2.cpp
lw7/: CMakeLists.txt
lw7/task7_1/: CMakeLists.txt  main.cpp
lw7/task7_1/_libs/: _exceptionHandler.h  _helpers.h
lw7/task7_2/: CMakeLists.txt  main.cpp
lw7/task7_2/_libs/: _generator.h
lw7/task7_3/: CMakeLists.txt  main.cpp
lw7/task7_3/_libs/: _fs.h  _generator.h
lw7/task7_4/: AsyncFile.h  CMakeLists.txt  Dispatcher.h  IoUringAwaitable.h  Task.h  main.cpp
lw8/: CMakeLists.txt
lw8/task8_1/: BitonicSorter.h  CMakeLists.txt  main.cpp
lw8/task8_2/: CMakeLists.txt  GaussianBlurFilter.h  main.cpp
lw8/task8_2/_libs/: _logger.h
